[package]
name = "pgv-cli"
version = "0.1.0"
edition = "2021"
authors = ["Hazel Stagner"]
description = "A CLI tool for encoding PGV video files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
image = "0.24.6"
pgv_rs = "0.1.1"
wav = "1.0.0"
